random blocks on the board

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="block_holder_container">
         <div>Hold</div>
-        <div class="block_holder"></div>
+        <div class="block_holder" id="hold_block_holder"></div>
     </div>
     <div class="center">
         <div class="score">Score: 0</div>
@@ -21,7 +21,7 @@
     </div>
     <div class="block_holder_container">
         <div>Next</div>
-        <div class="block_holder"></div>
+        <div class="block_holder" id="next_block_holder"></div>
     </div>
     <script type="module" src="compiledJS/script.js"></script>
 </body>
